website/code/fasta-gij.log
BUILD COMMANDS FOR: fasta.gij

Sat Sep  3 00:35:30 PDT 2005

if [ ! -d fasta.gij_run ] ; then mkdir fasta.gij_run ; fi
cp /opt/shootout/shootout/bench/fasta/fasta.gij fasta.gij_run/fasta.java
( cd fasta.gij_run ; /usr/bin/gcj-3.4 -C -classpath '.' fasta.java )
fasta.java:1: error: Class or interface declaration expected.
   EMPTY
   ^
1 error
make[3]: [fasta.gij_run] Error 1 (ignored)
touch fasta.gij_run

=================================================================
COMMAND LINE (%A is single numeric argument):

 /usr/bin/gij-3.4 --classpath fasta.gij_run fasta %A
Exception in thread "main" java.lang.NoClassDefFoundError: fasta
   at gnu.gcj.runtime.FirstThread.run() (/usr/lib/libgcj.so.5.0.0)
   at _Jv_ThreadRun(java.lang.Thread) (/usr/lib/libgcj.so.5.0.0)
   at _Jv_RunMain(java.lang.Class, byte const, int, byte const, boolean) (/usr/lib/libgcj.so.5.0.0)
   at __libc_start_main (/lib/tls/libc-2.3.5.so)
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
